<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment" >

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_masalan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageView_masalan"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/masalan_cover"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_masalan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/masalan_song_name"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView_masalan"
                app:layout_constraintTop_toTopOf="@+id/imageView_masalan" />

            <TextView
                android:id="@+id/textView_zanco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singer_name"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_masalan"
                app:layout_constraintStart_toStartOf="@+id/textView_masalan"
                app:layout_constraintTop_toBottomOf="@+id/textView_masalan" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_boro_samte_ali"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_masalan">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">


            <TextView
                android:id="@+id/textView_boro_samte_ali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/boro_samte_ali_song_name"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView_boro_samte_ali"
                app:layout_constraintTop_toTopOf="@+id/imageView_boro_samte_ali" />

            <TextView
                android:id="@+id/textView_zanco2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singer_name"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_boro_samte_ali"
                app:layout_constraintStart_toStartOf="@+id/textView_boro_samte_ali"
                app:layout_constraintTop_toBottomOf="@+id/textView_boro_samte_ali" />

            <ImageView
                android:id="@+id/imageView_boro_samte_ali"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/boro_samte_ali__cover"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_rade_paa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_boro_samte_ali">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">


            <TextView
                android:id="@+id/textView_rade_paa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/rade_paa_song_name"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView_rade_paa"
                app:layout_constraintTop_toTopOf="@+id/imageView_rade_paa" />

            <TextView
                android:id="@+id/textView_zanco3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singer_name"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_rade_paa"
                app:layout_constraintStart_toStartOf="@+id/textView_rade_paa"
                app:layout_constraintTop_toBottomOf="@+id/textView_rade_paa" />

            <ImageView
                android:id="@+id/imageView_rade_paa"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/readepa_cover"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_khosham_miad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_rade_paa">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView_khosham_miad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/khosham_miad_song_name"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView_khosham_miad"
                app:layout_constraintTop_toTopOf="@+id/imageView_khosham_miad" />

            <TextView
                android:id="@+id/textView_zanco4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singer_name"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_khosham_miad"
                app:layout_constraintStart_toStartOf="@+id/textView_khosham_miad"
                app:layout_constraintTop_toBottomOf="@+id/textView_khosham_miad" />

            <ImageView
                android:id="@+id/imageView_khosham_miad"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/khosham_miad_cover"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_control"
        android:layout_width="0dp"
        android:layout_height="90dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_play"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_play"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_pause"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_pause"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView_play"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_stop"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_stop"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_play"
                app:layout_constraintEnd_toStartOf="@+id/imageView_play"
                app:layout_constraintTop_toTopOf="@+id/imageView_play" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>